--- a/my-awesome-cv/cv/sections/skills.tex
+++ b/my-awesome-cv/cv/sections/skills.tex
@@ -14,15 +14,16 @@
     {Programming}
     {Python, R, C++, MATLAB, SQL}
 
-%-----------------------------------------------------------
-  \cvskill
-    {Python}
-    {NumPy, Polars, Pandas,  SciKit-Learn, TensorFlow, Keras, PyTorch, Seaborn, Matplotlib}
 
 %-----------------------------------------------------------
   \cvskill
-    {R}
-    {tidyverse (tibble, tidyr, readr, dplyr, purrr, stringr, ggplot2), tidymodels (rsample, parsnip, recipes, workflow, tune)}
+    {Back-end}
+    {FastAPI, Django, plumber}
+
+%-----------------------------------------------------------
+  \cvskill
+    {Python}
+    {Polars, Pandas, NumPy, SciKit-Learn, TensorFlow, Keras, PyTorch, Seaborn, Matplotlib, plotnine}
 
 %-----------------------------------------------------------
   \cvskill
@@ -31,18 +32,13 @@
 
 %-----------------------------------------------------------
   \cvskill
-    {Backend}
-    {FastAPI, Django, plumber}
-
-%-----------------------------------------------------------
-  \cvskill
     {Fav. Tools}
-    {nvim, tmux}
+    {nvim, tmux, Alacritty}
 
 %-----------------------------------------------------------
   \cvskill
     {DevOps}
-    {git, GitHub Actions, Docker, Kubernetes, AWS}
+    {git, GitHub Actions, Docker, Docker Compose, Kubernetes, AWS}
 
 %-----------------------------------------------------------
 \end{cvskills}
