add binding scripts

--- a/my-awesome-cv/cv/sections/experience.tex
+++ b/my-awesome-cv/cv/sections/experience.tex
@@ -11,6 +11,20 @@
 
 %-----------------------------------------------------------
   \cventry
+    {Vexcash AG}
+    {Berlin}
+    {Data Scientist}
+    {Jun. 2022 - Aug. 2022}
+    {
+      \begin{cvitems}
+        \item{Evaluated the technical state of the company and developed a migration plan in order to modernize its data infrastructure.}
+        \item{Developed several Grafana Dashboards that show daily, weekly, and monthly customer acquisition and credit payout statistics.}
+        \item{Created a few dozen explanatory data analyses with MS SQL and Python to deliver advanced statistics and insights on the company’s state, enabling us to discover new target customer groups for customer acquisition.}
+      \end{cvitems}
+    }
+
+%-----------------------------------------------------------
+  \cventry
     {Spotcap Global}
     {Berlin}
     {Data Scientist}
@@ -21,7 +35,7 @@
         \item{Developed an Ending Day Balance Forecasting model with a Deep Neural Network. Enables forecasting with a 30-day horizon and predicting account parameters such as accounts receivable and payable.}
         \item{Developed an ML model for Loan Default Prediction based only on Bank Account Transaction Data which replaced the former model and reduced the number of independent data sources to only one (Open-Banking System of Nordigen), simplifying Risk Assessment on the client's side.}
         \item{Developed a Machine Learning Framework in R using packages such as tidyverse and tidymodels, significantly easing and reducing ML deployment.}
-        \item{Developed a Bank Account Transaction clustering model with NLP and Linear Algebra techniques that became part of the \href{https://www.spotcap.com/bank-account-insights/}{Bank Account Insides} (BAI) product.}
+        \item{Developed a Bank Account Transaction clustering model with NLP and Linear Algebra techniques that became part of the \myhref{https://www.spotcap.com/bank-account-insights/}{Bank Account Insides} (BAI) product.}
         \item{Developed a COVID Resilience metric through EDA with Feature Engineering and a Linear Model, which was used as one of the primary metrics in the BAI product during the acute lockdown period.}
         \item{Restructured DS infrastructure by migrating from RStudio Connect Platform to AWS, saving about 12k euros per year (about 82\% reduction of DS cloud expenditures).}
         \item{Developed and fully automated end-to-end CI/CD pipeline with GitHub Actions and AWS services, limiting human interaction to the minimum.}
