--- a/my-awesome-cv/cv/sections/skills.tex
+++ b/my-awesome-cv/cv/sections/skills.tex
@@ -14,16 +14,15 @@
     {Programming}
     {Python, R, C++, MATLAB, SQL}
 
-
-%-----------------------------------------------------------
-  \cvskill
-    {Back-end}
-    {FastAPI, Django, plumber}
-
 %-----------------------------------------------------------
   \cvskill
     {Python}
-    {Polars, Pandas, NumPy, SciKit-Learn, TensorFlow, Keras, PyTorch, Seaborn, Matplotlib, plotnine}
+    {Polars, Pandas, NumPy, SciKit-Learn, TensorFlow, Keras, PyTorch, Seaborn, Matplotlib, Flask, FastAPI}
+
+%-----------------------------------------------------------
+  \cvskill
+    {R}
+    {tidyverse (tibble, tidyr, readr, dplyr, purrr, stringr, ggplot2), tidymodels (rsample, parsnip, recipes, workflow, tune), plumber}
 
 %-----------------------------------------------------------
   \cvskill
@@ -33,12 +32,17 @@
 %-----------------------------------------------------------
   \cvskill
     {Fav. Tools}
-    {nvim, tmux, Alacritty}
+    {nvim, tmux, nvim-R, JupyterLab, DataGrip}
 
 %-----------------------------------------------------------
   \cvskill
-    {DevOps}
-    {git, GitHub Actions, Docker, Docker Compose, Kubernetes, AWS}
+    {AWS}
+    {S3, Lambda, EC2, ECS, ECR, Api Gateway, DynamoDB, CloudWatch, SNS, Amazon EventBridge}
+
+%-----------------------------------------------------------
+  \cvskill
+    {Other}
+    {git, GitHub Actions, Kubernetes, Docker, Docker Compose, Apache Airflow, RStudio Connect, webMethods}
 
 %-----------------------------------------------------------
 \end{cvskills}
