--- a/my-awesome-cv/cv/sections/writings.tex
+++ b/my-awesome-cv/cv/sections/writings.tex
@@ -13,14 +13,14 @@
   \cventryshort
     {Medium - online publishing platform}
     {Berlin}
-    {\href{https://medium.com/@ilia.ozhmegov/polars-vs-pandas-what-is-more-convenient-331956742a69}{Polars vs Pandas: what is more convenient?} }
+    {\myhref{https://medium.com/@ilia.ozhmegov/polars-vs-pandas-what-is-more-convenient-331956742a69}{Polars vs Pandas: what is more convenient?} }
     {Jun. 2022}
 
 %-----------------------------------------------------------
   \cventryshort
     {Conference Extreme robotics and conversion tendencies (ER-2018)}
     {Saint Petersburg}
-    {\href{https://er.rtc.ru/images/docs/Trudy_konf_ER-2018.pdf}{Compression of Streaming Video from a Ground Robot's Camera for Communication Channels with Low Bandwidth} (p.432)}
+    {\myhref{https://er.rtc.ru/images/docs/Trudy_konf_ER-2018.pdf}{Compression of Streaming Video from a Ground Robot's Camera for Communication Channels with Low Bandwidth} (p.432)}
     {Jun. 2018}
 
 %-----------------------------------------------------------
