--- a/my-awesome-cv/cv/cv.tex
+++ b/my-awesome-cv/cv/cv.tex
@@ -98,10 +98,7 @@
 %	CV/RESUME CONTENT
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
-\input{sections/experience.tex}
-\input{sections/education.tex}
-\input{sections/writings.tex}
-\input{sections/skills.tex}
+\input{sections.tex}
 
 
 %-------------------------------------------------------------------------------
