--- a/my-awesome-cv/cv/cv.tex
+++ b/my-awesome-cv/cv/cv.tex
@@ -58,7 +58,7 @@
 \position{Data Scientist{\enskip\cdotp\enskip}ML Engineer}
 \address{Berlin, Germany}
 
-\mobile{(+49) 157-3260-5328}
+\mobile{(+49) 111 111 11 11}
 \email{ilia.ozhmegov@gmail.com}
 %\dateofbirth{January 1st, 1970}
 %\homepage{ozhmegov.com}
@@ -84,6 +84,7 @@
 
 % Print the header with above personal information
 % Give optional argument to change alignment(C: center, L: left, R: right)
+\input{personal_data/mobile.tex}
 \makecvheader[C]
 
 % Print the footer with 3 arguments(<left>, <center>, <right>)
